Fix missing background on <code>

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ img {
 }
 
 pre, code {
-  /* background-color: #f4f4f4; */
   border-radius: 3px;
   font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
   font-size: 85%;
@@ -32,6 +31,7 @@ pre {
 }
 
 code {
+  background-color: #f4f4f4;
   margin: 0;
   padding: .2em .4em;
 }
